Closed Bug 160334 Opened 22 years ago Closed 22 years ago

EVENT_STATE_CHANGE with STATE_BUSY flag cleared is fired too early for new page loads

Categories

(Core :: Disability Access APIs, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: aaronlev, Assigned: aaronlev)

Details

Attachments

(1 file, 2 obsolete files)

We are notifying assistive technology that a page is finished loaded when it is
first displayed, instead of when the text of the page is completely loaded.

We should wait to fire the event until the page is completely loaded, otherwise
assistive tech has difficulty loading the page contents into its own buffer.
Waiting to find out from Bill Smith if we're firing this event at the right time
now, in a test build I gave him.
Attached patch Same solution, better patch (obsolete) — Splinter Review
Attachment #93426 - Attachment is obsolete: true
Comment on attachment 93778 [details] [diff] [review]
Deterministic solution - just use progress listener's STATE_STOP to tell us when page is finished. Doesn't appear that window is ever hidden when this happens.

r=jgaunt
Attachment #93778 - Flags: review+
Comment on attachment 93778 [details] [diff] [review]
Deterministic solution - just use progress listener's STATE_STOP to tell us when page is finished. Doesn't appear that window is ever hidden when this happens.

I'd make sure that this works ok in places where there are multiple documents
in the page (framesets, iframes).  Assuming that all works fine, sr=bryner.
Attachment #93778 - Flags: superreview+
cbecked in a long time ago.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: