Bug 160334. Firing accessibilty API event too early when indicating doc ready for MSAA parsing. r=jgaunt, sr=bryner